--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -26,7 +26,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:max="10000"/>
+        android:max="100"/>
 
     <View
         android:layout_width="match_parent"
@@ -36,6 +36,7 @@
         android:background="@color/colorLowOpacityGrey"/>
 
     <TextView
+        android:id="@+id/dashboard_next_course_hint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
