--- a/app/src/main/res/layout/module_update_card.xml
+++ b/app/src/main/res/layout/module_update_card.xml
@@ -73,7 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/module_card_progress_bar"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="5">
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="match_parent"
@@ -88,10 +89,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="end"
+                android:layout_gravity="bottom|end"
                 android:orientation="horizontal"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp">
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="6dp">
 
                 <ImageButton
                     android:layout_width="50dp"
