--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -56,6 +56,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/dashboard_course_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -65,6 +66,7 @@
             android:text="@string/another_course_button" />
 
         <Button
+            android:id="@+id/dashboard_module_button"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -74,6 +76,7 @@
             android:text="@string/another_module_button" />
 
     </LinearLayout>
+
 
     <View
         android:layout_width="match_parent"
